fix: test responsive about on tablet

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -121,8 +121,8 @@ header{
     }
     .about_portrait{
         position: absolute;
-        left: 23%;
-        top: 128%;
+        left: 22%;
+        top: 85%;
  
     }
     .portrait_img{
